# UnknownKraken

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMENTS_TEMPLATES  Dockerfile  INSTALL  INSTALL.md  LICENCE  LICENCE_PREAMBLE  PULL_REQUEST_TEMPLATE.md  README.md  README_FR  TODO  TODO.md  current  install  install_dependencies_from_sources.sh  macros.cmake  out.txt  package.in.cmake  test_libuv_server.sh  travis.yml  ukconfig.in.cmake  upgrade-libuv-TODO  zlib.supp
.github/ISSUE_TEMPLATE/: bug_report.md
Crypto/: CMakeLists.txt  TODO.txt
Crypto/examples/: base64_encoding_example.c  basic_usage.c  compression_example.c  crypto_metadata_example.c  crypto_random_example.c  data_cipher_example.c  hasher_example.c  pkcs12_keystore_example.c  rsa_signer_example.c  sym_file_encryption_example.c  x509_certificate_gen_ca_and_sign_example.c  x509_certificate_gen_self_signed_example.c
MemoryPlugin/: CMakeLists.txt
MemoryPlugin/examples/: create_empty_plugin_example.c  create_new_plugin_example.c  load_plugin_example.c  release_plugin_example.c  update_plugin_example.c
MemorySlot/: CMakeLists.txt
MemorySlot/examples/: load_slot_example.c  save_slot_example.c  update_slot_example.c
MemorySlot/src/uk/ms/: ms.h
MemorySlot/src/uk/ms/api/: slot.c  slot.h  slot_state.h  slot_struct.h
MemorySlot/src/uk/ms/impl/win/: resource.c  resource.h
SecureStorage/: CMakeLists.txt
SecureStorage/examples/: write_read_example.c
SecureStorage/lib/openssl/include/openssl/: cms.h  dh.h  dsa.h  objects.h  ssl.h
SecureStorage/src/uk/sstorage/: entry.c  entry.h  reader.c  reader.h  sstorage.c  sstorage.h  writer.c  writer.h
SharedMemoryObject/: CMakeLists.txt
SharedMemoryObject/examples/: hello_world_example.c
SharedMemoryObject/src/uk/smo/: smo.h
SharedMemoryObject/src/uk/smo/api/: smo_handle.c  smo_handle.h
SharedMemoryObject/src/uk/smo/impl/linux/: smo_linux.c
SharedMemoryObject/src/uk/smo/impl/windows/: smo_windows.c
UnknownEcho/: .gitignore  CMakeLists-orig.cmake  CMakeLists.txt  Dockerfile  INSTALL.md  README.md
UnknownEcho/certificate-howto/: gen_server_chain.sh  gen_simple_server.sh
UnknownEcho/docs/: COMMENTS_TEMPLATES.md
UnknownEcho/examples/: channel_client_protocol_example.c  channel_server_protocol_example.c
UnknownEcho/src/unknownecho/: defines.h  init.c  init.h
Utils/: CMakeLists.txt  TODO.md
Utils/examples/: basic_example.c  byte_stream_example.c  byte_vector_example.c  color_example.c  file_utility_example.c  folder_utility_example.c  hex_utility_example.c  input_password_example.c  logger_example.c  logger_example2.c  logger_example3.c  progress_bar_example.c  queue_example.c  safe_arithmetic_example.c  stacktrace_example.c  stacktrace_example2.c  string_builder_example.c  string_split_example.c  string_utility_example.c  string_vector_example.c
certificate-howto/: chain_tuto  gen_ca.sh
cmake/: config-footer.tpl.cmake  config-head.tpl.cmake  config-multiple_libraries.tpl.cmake  config-once_library.tpl.cmake  macros.cmake
doc/: LICENCE_PREAMBLE  UnknownEcho_Protocol
doc/doxygen/: Doxyfile
doc/message_format/: HANDSHAKE  MESSAGE_ACK  RECEIVER_MESSAGE  SERVER_HEADER_MESSAGE
docs/: LICENCE_PREAMBLE.md
examples/: asmlib.h  asmlib_example.c  byte_split_example.c  byte_stream_example.c  byte_vector_example.c  channel_client_protocol_example.c  channel_server_protocol_example.c  client_channel_protocol_example.c  color_example.c  compression_example.c  crypto_metadata_example.c  csr_exchange_example.c  data_cipher_example.c  hasher_example.c  input_password_example.c  libuv_tcp_client_example.c  libuv_tcp_server_example.c  logger_example.c  message_cipher_client_example.c  message_cipher_server_example.c  multiple_progress_bars_example.c  pkcs12_keystore_example.c  progress_bar_example.c  protocol_client_example.c  protocol_server_example.c  queue_example.c  relay_client_example.c  relay_client_gen_crypto_metadatas_example.c  relay_message_encoder_example.c  relay_reverse_client_example.c  relay_route_encoder_example.c  relay_route_encoder_example2.c  relay_route_example.c  relay_server_example.c  relay_step_example.c  server_channel_protocol_example.c  signed_x509_certificate_gen_example.c  signed_x509_certificate_gen_example2.c  signer_example.c  socket_client_channel_example.c  (+11 more)
lib/: libcrypto.so.1.1  libssl.so.1.1
lib/windows/: zlib.exp  zlibstatic.lib
old/: asym_key.c_old  asym_key.h_old  libxml2_example.c
old/model/entity/: cipher_message_struct.h  group_cipher_message_struct.h  pgp_keystore.h  plain_message_struct.h
old/model/manager/: pgp_keystore_manager_struct.h  tls_keystore_manager.h
old/model/message/: cipher_message.h  decipher_message.h
old/old_key/: asym_key.c  asym_key.h  private_key.c  private_key.h  public_key.c  public_key.h  sym_key.c
res/: bundle.pem
res/certificate/: gen_client_server_example.sh  gen_simple_server.sh
res/certificates/: c1_tls.crt  c1_tls.key  ca.crt  server_tls.crt
res/pem/: c1_pgp_priv.pem  c1_pgp_pub.pem  c2_pgp_priv.pem  c2_pgp_pub.pem  server_pgp_priv.pem  server_pgp_pub.pem
res/server/certificate/: tls_server_key.pem
res/tls/: ca.crt  ca.key  ssl_client.crt  ssl_client.csr  ssl_client.key  ssl_server.crt  ssl_server.csr  ssl_server.key
res/tls2/: ca.crt  gen.sh  ssl_client.crt  ssl_client.key  ssl_server.crt  ssl_server.key
res/tls3/: bundle.pem~  ssl_client1.crt  ssl_client2.key  test.pem~
src/unknownecho/: alloc.h  bool.h  defines.h  init.c  init.h  input.c  input.h
src/unknownecho/byte/: byte_reader.c  byte_reader.h  byte_split.c  byte_split.h  byte_stream.c  byte_stream.h  byte_stream_struct.h  byte_utility.c  byte_utility.h  byte_writer.c  byte_writer.h  hex_utility.c  hex_utility.h
src/unknownecho/concurrent/: multiple_progress_bars.c  multiple_progress_bars.h  threadpool.c  threadpool.h
src/unknownecho/console/: color.c  color.h  console.c  console.h  input.c  input.h  progress_bar.c  progress_bar.h
src/unknownecho/container/: byte_vector.c  byte_vector.h  queue.c  queue.h  string_vector.c  string_vector.h
tests/: main.c
(+619 files in other folders)
